--- a/styles/views/locations.css
+++ b/styles/views/locations.css
@@ -18,16 +18,22 @@
     text-align: center;
 }
 
-.location-inner-left h6 {
+/*.location-inner-left */
+h6 {
     font-family: 'Arimo', sans-serif;
     margin-bottom: 15px;
     font-size: 1.5rem;
     text-transform: uppercase;
-
-
+    font-weight: bold;
 }
 
-.location-inner-left h1 {
+/*h6 {
+  font-weight: bold;
+
+}*/
+
+/*.location-inner-left*/
+h1 {
     color: #59B5C7;
     margin-bottom: 25px;
     font-size: 2.5rem;
@@ -41,14 +47,37 @@
     text-align: center;
 }
 
-.location-inner-right h3 {
+.112233 {
+  color: #4BACC1
+  margin-bottom: 25px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.1122343 {
+  color: #C48092
+  margin-bottom: 25px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.11223489 {
+  color: #005DF4
+  margin-bottom: 25px;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+/*.location-inner-right */
+h3 {
     color: #000;
     width: 100%;
     margin: 0 auto 25px;
     font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
-
 }
 
 .location-inner-left p {
@@ -102,4 +131,3 @@
         margin: auto;
     }
 }
-
